[MOSIP-37805] Testing push-trigger to show both modules in sonar cloud (#770)
* [MOSIP-37805] Tetsing push-trigger to show both modules in sonar cloud

Signed-off-by: Mahesh.Binayak <Mahesh.Binayak@technoforte.co.in>

* [MOSIP-37805] Tetsing push-trigger to show both modules in sonar cloud

Signed-off-by: Mahesh.Binayak <Mahesh.Binayak@technoforte.co.in>

* [MOSIP-37805] Tetsing push-trigger to show both modules in sonar cloud

Signed-off-by: Mahesh.Binayak <Mahesh.Binayak@technoforte.co.in>

* [MOSIP-37805] Testing push-trigger to show both modules in sonar cloud

Signed-off-by: Mahesh.Binayak <Mahesh.Binayak@technoforte.co.in>

* Update push-trigger.yml

---------

Signed-off-by: Mahesh.Binayak <Mahesh.Binayak@technoforte.co.in>
Signed-off-by: Mahesh-Binayak <76687012+Mahesh-Binayak@users.noreply.github.com>

--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -81,7 +81,7 @@ jobs:
   sonar_analysis:
     needs: build-maven-pre-registration
     if: "${{  github.event_name != 'pull_request' }}"
-    uses: mosip/kattu/.github/workflows/maven-sonar-analysis-new.yml@master-java21
+    uses: mosip/kattu/.github/workflows/maven-sonar-analysis-new.yml@develop
     with:
       SERVICE_LOCATION: ./pre-registration
     secrets:
@@ -191,7 +191,7 @@ jobs:
   sonar_analysis_apitest_prereg:
     needs: build-maven-apitest-prereg
     if: "${{  github.event_name != 'pull_request' }}"
-    uses: mosip/kattu/.github/workflows/maven-sonar-analysis-new.yml@master-java21
+    uses: mosip/kattu/.github/workflows/maven-sonar-analysis-new.yml@develop
     with:
       SERVICE_LOCATION: ./api-test
     secrets:
