--- a/helm/prereg-datasync/Chart.yaml
+++ b/helm/prereg-datasync/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: prereg-datasync
 description: A Helm chart for MOSIP Pre-registration Datasync service
 type: application
-version: 0.0.1-develop
+version: 1.3.0-beta.1-develop
 appVersion: ""
 dependencies:
   - name: common
