--- a/api-test/pom.xml
+++ b/api-test/pom.xml
@@ -8,7 +8,7 @@
 	<name>apitest-prereg</name>
 	<description>Parent project of MOSIP Pre-Registration apitests</description>
 	<url>https://github.com/mosip/pre-registration</url>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0-beta.1</version>
 
 	<licenses>
 		<license>
@@ -49,14 +49,14 @@
 		<maven.source.plugin.version>2.2.1</maven.source.plugin.version>
 
 		<git.commit.id.plugin.version>3.0.1</git.commit.id.plugin.version>
-		<fileName>apitest-prereg-1.3.0-SNAPSHOT-jar-with-dependencies</fileName>
+		<fileName>apitest-prereg-1.3.0-beta.1-jar-with-dependencies</fileName>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>io.mosip.testrig.apitest.commons</groupId>
 			<artifactId>apitest-commons</artifactId>
-			<version>1.3.0-SNAPSHOT</version>
+			<version>1.3.0-beta.1</version>
 		</dependency>
 	</dependencies>
 
