--- a/pre-registration/pom.xml
+++ b/pre-registration/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>io.mosip.preregistration</groupId>
 	<artifactId>pre-registration-parent</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0-beta.1</version>
 	<packaging>pom</packaging>
 
 	<name>pre-registration</name>
@@ -117,7 +117,7 @@
 		<!-- Mosip kernel -->
 		<kernel.bom.version>1.3.0-beta.1</kernel.bom.version>
 		<kernel.core.version>1.3.0-beta.1</kernel.core.version>
-		<pre.registration.core.version>1.3.0-SNAPSHOT</pre.registration.core.version>
+		<pre.registration.core.version>1.3.0-beta.1</pre.registration.core.version>
 		<spring-cloud.version>2020.0.4</spring-cloud.version>
 	</properties>
 	
