--- a/pre-registration/pre-registration-captcha-service/pom.xml
+++ b/pre-registration/pre-registration-captcha-service/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.3.0-SNAPSHOT</version>
+		<version>1.3.0-beta.1</version>
 	</parent>
 	
 	<groupId>io.mosip.preregistration.captcha</groupId>
 	<artifactId>pre-registration-captcha-service</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0-beta.1</version>
 
 	<name>pre-registration-captcha-service</name>
 	<description>A pre-registration service to generate and validate captcha</description>
@@ -22,7 +22,7 @@
 		<kernel.transliteration.icu4j.version>1.3.0-beta.1</kernel.transliteration.icu4j.version>
 		<kernel.idobjectvalidator.version>1.3.0-beta.1</kernel.idobjectvalidator.version>
 		<kernel.bom.version>1.3.0-beta.1</kernel.bom.version>
-		<pre.registration.core.version>1.3.0-SNAPSHOT</pre.registration.core.version>
+		<pre.registration.core.version>1.3.0-beta.1</pre.registration.core.version>
 	</properties>
 
 	<dependencyManagement>
