--- a/pre-registration/pre-registration-datasync-service/pom.xml
+++ b/pre-registration/pre-registration-datasync-service/pom.xml
@@ -7,11 +7,11 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.3.0-SNAPSHOT</version>
+		<version>1.3.0-beta.1</version>
 	</parent>
 
 	<artifactId>pre-registration-datasync-service</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0-beta.1</version>
 	<name>pre-registration-datasync-service</name>
 
 	<properties>
@@ -21,9 +21,9 @@
 		<kernel.transliteration.icu4j.version>1.3.0-beta.1</kernel.transliteration.icu4j.version>
 		<kernel.bom.version>1.3.0-beta.1</kernel.bom.version>
 		<mosip.openid.bridge.version>1.3.0-beta.1</mosip.openid.bridge.version>
-		<pre.registration.core.version>1.3.0-SNAPSHOT</pre.registration.core.version>
-		<pre.registration.application.service.version>1.3.0-SNAPSHOT</pre.registration.application.service.version>
-		<pre.application.service.version>1.3.0-SNAPSHOT</pre.application.service.version>
+		<pre.registration.core.version>1.3.0-beta.1</pre.registration.core.version>
+		<pre.registration.application.service.version>1.3.0-beta.1</pre.registration.application.service.version>
+		<pre.application.service.version>1.3.0-beta.1</pre.application.service.version>
 	</properties>
 
 	<dependencyManagement>
