--- a/api-test/src/main/resources/preReg/GetBookingsForRegCenter/GetBookingsForRegCenter.yml
+++ b/api-test/src/main/resources/preReg/GetBookingsForRegCenter/GetBookingsForRegCenter.yml
@@ -11,10 +11,9 @@ GetBookingsForRegCenter:
   "regCenterId": "10003"
 }'
       output: '{
-  "regCenterId": "10003"
 }'
    Prereg_GetBookingsForRegCenter_with_InValid_date_format:
-      endPoint: /preregistration/v1/applications/bookings/{regCenterId}?from_date=2020-45461&to_date=2034-10-13
+      endPoint: /preregistration/v1/applications/bookings/{regCenterId}?appointmentDate=2020-45461&appointmentToDate=2034-10-13
       uniqueIdentifier: TC_prereg_GetBookingsForRegCenter_02
       description: Retrieve booking for a registration center with an invalid date format
       role: batch
@@ -27,7 +26,7 @@ GetBookingsForRegCenter:
       output: '{
    "errors": [
     {
-      "errorCode": "PRG_BOOK_RCI_032"
+      "errorCode": "PRG_CORE_REQ_016"
     }
   ]
 }'
@@ -63,7 +62,7 @@ GetBookingsForRegCenter:
       output: '{
    "errors": [
     {
-      "errorCode": "PRG_BOOK_RCI_032"
+      "errorCode": "PRG_APP_013"
     }
   ]
 }'
