--- a/api-test/pom.xml
+++ b/api-test/pom.xml
@@ -2,13 +2,13 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>io.mosip.preregistration</groupId>
+	<groupId>io.mosip.prereg</groupId>
 	<artifactId>apitest-prereg</artifactId>
 	<packaging>jar</packaging>
 	<name>apitest-prereg</name>
 	<description>Parent project of MOSIP Pre-Registration apitests</description>
 	<url>https://github.com/mosip/pre-registration</url>
-	<version>1.3.0-beta.1</version>
+	<version>1.3.0-SNAPSHOT</version>
 
 	<licenses>
 		<license>
@@ -49,14 +49,14 @@
 		<maven.source.plugin.version>2.2.1</maven.source.plugin.version>
 
 		<git.commit.id.plugin.version>3.0.1</git.commit.id.plugin.version>
-		<fileName>apitest-prereg-1.3.0-beta.1-jar-with-dependencies</fileName>
+		<fileName>apitest-prereg-1.3.0-SNAPSHOT-jar-with-dependencies</fileName>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>io.mosip.testrig.apitest.commons</groupId>
 			<artifactId>apitest-commons</artifactId>
-			<version>1.3.0</version>
+			<version>1.3.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
@@ -163,7 +163,7 @@
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>
-										io.mosip.testrig.apirig.testrunner.MosipTestRunner</mainClass>
+										io.mosip.testrig.apirig.prereg.testrunner.MosipTestRunner</mainClass>
 								</transformer>
 							</transformers>
 							<!-- add this to prevent some security issues when
