--- a/pre-registration/pre-registration-datasync-service/Dockerfile
+++ b/pre-registration/pre-registration-datasync-service/Dockerfile
@@ -89,4 +89,4 @@ CMD wget -q --show-progress "${iam_adapter_url_env}" -O "${loader_path_env}"/ker
     wget -q --show-progress "${kernel_transliteration_icu4j_url_env}" -O "${loader_path_env}"/kernel-transliteration-icu4j.jar ; \
     wget -q --show-progress "${virusscanner_url_env}" -O "${loader_path_env}"/kernel-virusscanner-clamav.jar; \
     java -XX:-UseG1GC -XX:+ExplicitGCInvokesConcurrent -XX:-UseParallelGC -XX:+UseZGC -XX:+ZGenerational -XX:-UseShenandoahGC -XX:MaxGCPauseMillis=200  -XX:+UnlockExperimentalVMOptions -XX:+UseStringDeduplication -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseCompressedOops \
-    -Dloader.path="${loader_path_env}" -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -jar pre-registration-datasync-service.jar ; \
+    -jar -Dloader.path="${loader_path_env}" -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" pre-registration-datasync-service.jar ; \
