--- a/pre-registration/pre-registration-captcha-service/Dockerfile
+++ b/pre-registration/pre-registration-captcha-service/Dockerfile
@@ -81,4 +81,4 @@ USER ${container_user_uid}:${container_user_gid}
 EXPOSE 9089
 
 CMD  java -XX:-UseG1GC -XX:+ExplicitGCInvokesConcurrent -XX:-UseParallelGC -XX:+UseZGC -XX:+ZGenerational -XX:-UseShenandoahGC -XX:MaxGCPauseMillis=200  -XX:+UnlockExperimentalVMOptions -XX:+UseStringDeduplication -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseCompressedOops \
-    -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -jar pre-registration-captcha-service.jar ; \
+    -jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" pre-registration-captcha-service.jar ; \
