MOSIP-40274 Automated Pending test cases
Signed-off-by: NitinHegde <nitin.k@cyberpwn.com>

--- a/api-test/src/main/resources/preReg/createPrereg/createPrereg.yml
+++ b/api-test/src/main/resources/preReg/createPrereg/createPrereg.yml
@@ -719,3 +719,30 @@ CreatePrereg:
 }'
       output: '{
 }'
+   Prereg_CreatePrereg_without_input_sid:
+      endPoint: /preregistration/v1/applications/prereg
+      uniqueIdentifier: TC_Prereg_CreatePrereg_30
+      description: Creating preregistration without input
+      role: batch
+      restMethod: post
+      inputTemplate: preReg/createPrereg/createPrereg
+      outputTemplate: preReg/error
+      input: '{
+  "postalCode": "$REMOVE$",
+  "phone": "$REMOVE$",
+  "mobileno": "$REMOVE$",
+  "email": "$REMOVE$",
+  "IDSchemaVersion": $REMOVE$, 
+  "dateOfBirth": "$REMOVE$",
+  "version": "$REMOVE$",
+  "langCode": "$REMOVE$",
+  "requesttime": "$REMOVE$",
+  "id": "$REMOVE$"
+}'
+      output: '{
+   "errors": [
+    {
+      "errorCode": "PRG_CORE_REQ_003"
+    }
+  ]
+}'
