MOSIP-40274 Automated Pending test cases (#815)
* MOSIP-40274 Automated Pending test cases

Signed-off-by: NitinHegde <nitin.k@cyberpwn.com>

* MOSIP-40274 Automated Pending test cases

Signed-off-by: NitinHegde <nitin.k@cyberpwn.com>

* MOSIP-40274 Automated Pending test cases

Signed-off-by: NitinHegde <nitin.k@cyberpwn.com>

* MOSIP-40274 automate pre-reg testcases part-2

Signed-off-by: NitinHegde <nitin.k@cyberpwn.com>

---------

Signed-off-by: NitinHegde <nitin.k@cyberpwn.com>

--- a/api-test/src/main/resources/preReg/CancelAppointment/CancelAppointment.yml
+++ b/api-test/src/main/resources/preReg/CancelAppointment/CancelAppointment.yml
@@ -69,3 +69,21 @@ CancelAppointment:
     }
   ]
 }'
+   Prereg_CancelAppointment_forPendingAppointment_preRegistrationId_Neg:
+      endPoint: /preregistration/v1/appointment/{preRegistrationId}
+      uniqueIdentifier: TC_prereg_CancelAppointment_05
+      description: Canceling an appointment with an pending appointment preregistration ID
+      role: batch
+      restMethod: put
+      inputTemplate: preReg/CancelAppointment/cancelAppointment
+      outputTemplate: preReg/error
+      input: '{
+  "preRegistrationId": "$ID:CreatePrereg_Valid_Smoke_sid_preRegistrationId$"
+}'
+      output: '{
+   "errors": [
+    {
+      "errorCode": "PRG_BOOK_RCI_013"
+    }
+  ]
+}'
