--- a/api-test/src/main/resources/preReg/GetPreRegInfoByPrid/GetPreRegInfoByPrid.yml
+++ b/api-test/src/main/resources/preReg/GetPreRegInfoByPrid/GetPreRegInfoByPrid.yml
@@ -4,6 +4,7 @@ GetPreRegInfoByPrid:
       uniqueIdentifier: TC_prereg_GetPreRegInfoByPrid_01
       description: Retrieve preregistration information using the preReg Id with a valid preRegistrationId
       role: batch
+      checkErrorsOnlyInResponse: true
       restMethod: get
       inputTemplate: preReg/GetPreRegInfoByPrid/getPreRegInfoByPrid
       outputTemplate: preReg/GetPreRegInfoByPrid/getPreRegInfoByPridResult
@@ -11,10 +12,7 @@ GetPreRegInfoByPrid:
   "preRegistrationId": "$ID:CreatePrereg_All_Valid_Smoke_sid_preRegistrationId$"
 }'
       output: '{
-  "postalCode":"14022",
-  "dateOfBirth": "$IGNORE$",
-  "IDSchemaVersion": "$IGNORE$",
-  "phone": "$IGNORE$"
+  "postalCode":"14022"
 }'
 
    Prereg_GetPreRegInfoByPrid_inValid_preRegistrationId:
