MOSIP-40379 removed ignore line from PreReg module
Signed-off-by: Prathmesh Jadhav <prathmesh.j@cyberpwn.com>

--- a/api-test/src/main/resources/preReg/AddLostUinApplication/AddLostUinApplication.yml
+++ b/api-test/src/main/resources/preReg/AddLostUinApplication/AddLostUinApplication.yml
@@ -94,6 +94,7 @@ AddLostUinApplication:
       inputTemplate: preReg/AddLostUinApplication/addLostUinApplication
       outputTemplate: preReg/error
       input: '{
+  "version": "$REMOVE$",		
   "requesttime": "$TIMESTAMP$",
   "langCode": "eng",
   "id": "mosip.pre-registration.lostuin.create"
