--- a/pre-registration/pre-registration-datasync-service/pom.xml
+++ b/pre-registration/pre-registration-datasync-service/pom.xml
@@ -7,23 +7,23 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.3.0-beta.1</version>
+		<version>1.3.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>pre-registration-datasync-service</artifactId>
-	<version>1.3.0-beta.1</version>
+	<version>1.3.0-SNAPSHOT</version>
 	<name>pre-registration-datasync-service</name>
 
 	<properties>
 		<!-- Mosip kernel -->
-		<kernel.keymanager.version>1.3.0-beta.1</kernel.keymanager.version>
-		<kernel.ref.idobjectvalidator.version>1.3.0-beta.1</kernel.ref.idobjectvalidator.version>
-		<kernel.transliteration.icu4j.version>1.3.0-beta.1</kernel.transliteration.icu4j.version>
-		<kernel.bom.version>1.3.0-beta.1</kernel.bom.version>
-		<mosip.openid.bridge.version>1.3.0-beta.1</mosip.openid.bridge.version>
-		<pre.registration.core.version>1.3.0-beta.1</pre.registration.core.version>
-		<pre.registration.application.service.version>1.3.0-beta.1</pre.registration.application.service.version>
-		<pre.application.service.version>1.3.0-beta.1</pre.application.service.version>
+		<kernel.keymanager.version>1.3.0-SNAPSHOT</kernel.keymanager.version>
+		<kernel.ref.idobjectvalidator.version>1.3.0-SNAPSHOT</kernel.ref.idobjectvalidator.version>
+		<kernel.transliteration.icu4j.version>1.3.0-SNAPSHOT</kernel.transliteration.icu4j.version>
+		<kernel.bom.version>1.3.0-SNAPSHOT</kernel.bom.version>
+		<mosip.openid.bridge.version>1.3.0-SNAPSHOT</mosip.openid.bridge.version>
+		<pre.registration.core.version>1.3.0-SNAPSHOT</pre.registration.core.version>
+		<pre.registration.application.service.version>1.3.0-SNAPSHOT</pre.registration.application.service.version>
+		<pre.application.service.version>1.3.0-SNAPSHOT</pre.application.service.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 		<nexus.staging.maven.plugin.version>1.6.14</nexus.staging.maven.plugin.version>
 	</properties>
