--- a/api-test/src/main/resources/preReg/bookAppointment/bookAppointment.yml
+++ b/api-test/src/main/resources/preReg/bookAppointment/bookAppointment.yml
@@ -93,8 +93,9 @@ BookAppointment:
       description: Book an appointment with a blank preregistration ID
       role: batch
       restMethod: post
+      checkOnlyStatusCodeInResponse: true
       inputTemplate: preReg/bookAppointment/bookAppointment
-      outputTemplate: preReg/error
+      outputTemplate: preReg/responseCode
       input: '{
   "preRegistrationId":"",   
   "registration_center_id": "$registration_center_id$",
@@ -106,12 +107,7 @@ BookAppointment:
   "requesttime": "$TIMESTAMP$"
 }'
       output: '{
-   "errors": [
-    {
-      "errorCode": "PRG_CORE_REQ_016"
-      
-    }
-  ]
+      "responseCode": "500"
 }'
    Prereg_BookAppointment_Invalid_Id:
       endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
