--- a/pre-registration/pre-registration-core/pom.xml
+++ b/pre-registration/pre-registration-core/pom.xml
@@ -21,6 +21,7 @@
 		<kernel.logger.logback.version>1.2.1-SNAPSHOT</kernel.logger.logback.version>
 		<kernel.dataaccess.hibernate.version>1.2.1-SNAPSHOT</kernel.dataaccess.hibernate.version>
 		<kernel.bom.version>1.2.1-SNAPSHOT</kernel.bom.version>
+<!--		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>-->
 	</properties>
 
 	<dependencyManagement>
