[MOSIP-41674] central sonatype migration changes
Signed-off-by: techno-467 <prafulrakhade02@gmail.com>

--- a/pre-registration/pre-registration-application-service/pom.xml
+++ b/pre-registration/pre-registration-application-service/pom.xml
@@ -6,23 +6,23 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.2.1-SNAPSHOT</version>
+		<version>1.2.1-rc1</version>
 	</parent>
 	
 	<artifactId>pre-registration-application-service</artifactId>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.1-rc1</version>
 	<name>Pre-Registration Application Service Project</name>
 	<description>Maven project of MOSIP Pre-Registration Service</description>
 	
 	<properties>
 		<!-- Mosip kernel -->
-		<kernel.khazana.version>1.2.1-SNAPSHOT</kernel.khazana.version>
-		<kernel.idobjectvalidator.version>1.2.1-SNAPSHOT</kernel.idobjectvalidator.version>
-		<kernel.templatemanager.velocity.version>1.2.1-SNAPSHOT</kernel.templatemanager.velocity.version>
-		<kernel.qrcodegenerator.zxing.version>1.2.1-SNAPSHOT</kernel.qrcodegenerator.zxing.version>
-		<kernel.transliteration.icu4j.version>1.2.1-SNAPSHOT</kernel.transliteration.icu4j.version>
-		<kernel.bom.version>1.2.1-SNAPSHOT</kernel.bom.version>
-		<pre.registration.core.version>1.2.1-SNAPSHOT</pre.registration.core.version>
+		<kernel.khazana.version>1.2.1-rc1</kernel.khazana.version>
+		<kernel.idobjectvalidator.version>1.2.1-rc1</kernel.idobjectvalidator.version>
+		<kernel.templatemanager.velocity.version>1.2.1-rc1</kernel.templatemanager.velocity.version>
+		<kernel.qrcodegenerator.zxing.version>1.2.1-rc1</kernel.qrcodegenerator.zxing.version>
+		<kernel.transliteration.icu4j.version>1.2.1-rc1</kernel.transliteration.icu4j.version>
+		<kernel.bom.version>1.2.1-rc1</kernel.bom.version>
+		<pre.registration.core.version>1.2.1-rc1</pre.registration.core.version>
 		<!-- Others -->
 		<org.hamcrest.version>2.1</org.hamcrest.version>
 		<lombok.version>1.18.30</lombok.version>
