--- a/pre-registration/pre-registration-datasync-service/pom.xml
+++ b/pre-registration/pre-registration-datasync-service/pom.xml
@@ -7,22 +7,22 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.2.1-SNAPSHOT</version>
+		<version>1.2.1-rc1</version>
 	</parent>
 
 	<artifactId>pre-registration-datasync-service</artifactId>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.1-rc1</version>
 	<name>pre-registration-datasync-service</name>
 
 	<properties>
 		<!-- Mosip kernel -->
-		<kernel.keymanager.version>1.2.1-SNAPSHOT</kernel.keymanager.version>
-		<kernel.ref.idobjectvalidator.version>1.2.1-SNAPSHOT</kernel.ref.idobjectvalidator.version>
-		<kernel.transliteration.icu4j.version>1.2.1-SNAPSHOT</kernel.transliteration.icu4j.version>
-		<kernel.bom.version>1.2.1-SNAPSHOT</kernel.bom.version>
-		<pre.registration.core.version>1.2.1-SNAPSHOT</pre.registration.core.version>
-		<pre.registration.application.service.version>1.2.1-SNAPSHOT</pre.registration.application.service.version>
-		<pre.application.service.version>1.2.1-SNAPSHOT</pre.application.service.version>
+		<kernel.keymanager.version>1.2.1-rc1</kernel.keymanager.version>
+		<kernel.ref.idobjectvalidator.version>1.2.1-rc1</kernel.ref.idobjectvalidator.version>
+		<kernel.transliteration.icu4j.version>1.2.1-rc1</kernel.transliteration.icu4j.version>
+		<kernel.bom.version>1.2.1-rc1</kernel.bom.version>
+		<pre.registration.core.version>1.2.1-rc1</pre.registration.core.version>
+		<pre.registration.application.service.version>1.2.1-rc1</pre.registration.application.service.version>
+		<pre.application.service.version>1.2.1-rc1</pre.application.service.version>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
 	</properties>
 
