MOSIP-42017 Corrected snapshot version for api test rig release
Signed-off-by: kameshsr <kameshsr1338@gmail.com>

--- a/pre-registration/pom.xml
+++ b/pre-registration/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>io.mosip.preregistration</groupId>
 	<artifactId>pre-registration-parent</artifactId>
-	<version>1.2.0.1</version>
+	<version>1.2.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>pre-registration</name>
