--- a/pre-registration/pre-registration-batchjob/pom.xml
+++ b/pre-registration/pre-registration-batchjob/pom.xml
@@ -6,10 +6,10 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.2.0.1</version>
+		<version>1.2.0.2-SNAPSHOT</version>
 	</parent>
 
-	<version>1.2.0.1</version>
+	<version>1.2.0.2-SNAPSHOT</version>
 	<artifactId>pre-registration-batchjob</artifactId>
 
 	<name>pre-registration-batchjob</name>
@@ -19,7 +19,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<io.micrometer.prometheus.version>1.4.2</io.micrometer.prometheus.version>
 	</properties>
-	
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
