MOSIP-40379 removed ignore line from PreReg API test rigs
Signed-off-by: Prathmesh Jadhav <prathmesh.j@cyberpwn.com>

--- a/api-test/src/main/resources/preReg/GetPreRegDemographicDataByPrid/GetPreRegDemographicDataByPrid.yml
+++ b/api-test/src/main/resources/preReg/GetPreRegDemographicDataByPrid/GetPreRegDemographicDataByPrid.yml
@@ -14,7 +14,7 @@ GetPreRegDemographicDataByPrid:
       output: '{
   "preRegistrationId": "$ID:CreatePrereg_Smoke_PreRegDemographicData_sid_preRegistrationId$",
   "postalCode":"14022",
-  "dateOfBirth": "1996/01/01",
+  "dateOfBirth": "$ID:CreatePrereg_Smoke_PreRegDemographicData_sid_dateOfBirth$",
   "IDSchemaVersion": "$SCHEMAVERSION$",
   "phone": "8249742850"
 }'
