MOSIP-40379 removed ignore line from PreReg API test rigs (#859)
* MOSIP-40379 removed ignore from prereg

Signed-off-by: Prathmesh Jadhav <prathmesh.j@cyberpwn.com>

* MOSIP-40379 removed ignore line from PreReg module

Signed-off-by: Prathmesh Jadhav <prathmesh.j@cyberpwn.com>

* MOSIP-40379 removed ignore line from PreReg module

Signed-off-by: Prathmesh Jadhav <prathmesh.j@cyberpwn.com>

* MOSIP-40379 removed ignore line from PreReg API test rigs

Signed-off-by: Prathmesh Jadhav <prathmesh.j@cyberpwn.com>

---------

Signed-off-by: Prathmesh Jadhav <prathmesh.j@cyberpwn.com>

--- a/api-test/src/main/resources/preReg/AddLostUinApplication/AddLostUinApplication.yml
+++ b/api-test/src/main/resources/preReg/AddLostUinApplication/AddLostUinApplication.yml
@@ -88,12 +88,13 @@ AddLostUinApplication:
       uniqueIdentifier: TC_prereg_AddLostUinApplication_05
       description: Process the lost UIN application without specifying the version and attribute
       role: batch
+      checkErrorsOnlyInResponse: true
       templateFields: ["langCode"]
       restMethod: post
       inputTemplate: preReg/AddLostUinApplication/addLostUinApplication
       outputTemplate: preReg/error
       input: '{
-  "version": "$IGNORE$",
+  "version": "$REMOVE$",		
   "requesttime": "$TIMESTAMP$",
   "langCode": "eng",
   "id": "mosip.pre-registration.lostuin.create"
