--- a/pre-registration/pom.xml
+++ b/pre-registration/pom.xml
@@ -68,7 +68,7 @@
 		</repository>
 	</distributionManagement>
 	<properties>
-		<pre.registration.core.version>1.2.0.1</pre.registration.core.version>
+		<pre.registration.core.version>1.2.0.2-SNAPSHOT</pre.registration.core.version>
 		<kernel.core.version>1.2.0.1</kernel.core.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
