[DSD-8457] automation zero failure release
Signed-off-by: Prafulrakhade <prafulrakhade02@gmail.com>

--- a/deploy/apitest-prereg/values.yaml
+++ b/deploy/apitest-prereg/values.yaml
@@ -2,6 +2,6 @@ modules:
   prereg:
     enabled: true
     image:
-      repository: mosipqa/apitest-prereg
-      tag: 1.2.0.x
+      repository: mosipid/apitest-prereg
+      tag: 1.2.0.2
       pullPolicy: Always
