--- a/helm/prereg-batchjob/Chart.yaml
+++ b/helm/prereg-batchjob/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: prereg-batchjob
 description: A Helm chart for MOSIP Pre-registration Batchjob service
 type: application
-version: 0.0.1-develop
+version: 12.0.2
 appVersion: ""
 dependencies:
   - name: common
